<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addItem.AddItemFragment">


    <!--item name-->

    <Button
        android:id="@+id/saveButton"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="44dp"
        android:background="#F9AA33"
        android:text="@string/save_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelButton" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="44dp"
        android:background="#F9AA33"
        android:text="@string/cancel_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemNameContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/itemDescContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPicPath"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_string" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--item desc-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemDescContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/itemInitPriceContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc_string" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--initial price-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemInitPriceContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/itemSoldPriceContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDescContainer"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemInitPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/init_price_string" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--sold price -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemSoldPriceContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/itemQuantityContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemInitPriceContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemSoldPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sold_price_string" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--quantity-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemQuantityContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/itemPlatformContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemSoldPriceContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_string" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--platform-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemPlatformContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemQuantityContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemPlatform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/platform_string" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--pic path-->

    <ImageView
        android:id="@+id/itemPicPath"
        android:layout_width="415dp"
        android:layout_height="109dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        app:layout_constraintBottom_toTopOf="@+id/itemNameContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>