<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inventory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inventory.InventoryFragment">

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="322dp"
        android:layout_height="95dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/summary_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/verticalLine"
        android:layout_width="0.5dp"
        android:layout_height="90dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/vertical_line"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toStartOf="@+id/profit_label"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toEndOf="@+id/seller_stats_label"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/seller_stats_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="87dp"
        android:text="@string/seller_stats"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toStartOf="@+id/verticalLine"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/listed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/sold"
        app:layout_constraintEnd_toStartOf="@+id/verticalLine"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/listed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/seller_stats_listed"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/listed"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/seller_stats_label" />

    <TextView
        android:id="@+id/sold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="26dp"
        android:text="@string/seller_stats_sold"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toStartOf="@+id/sold"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/listed_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toStartOf="@+id/verticalLine" />

    <TextView
        android:id="@+id/profit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="218dp"
        android:layout_marginLeft="218dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="87dp"
        android:text="@string/seller_stats_profit"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="263dp"
        android:layout_marginLeft="263dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="26dp"
        android:textColor="#F9AA33"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="@+id/verticalLine"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView" />

    <TextView
        android:id="@+id/emptyInventoryTV"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyInventory_string"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="573dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView"
        tools:listitem="@layout/item" />

</androidx.constraintlayout.widget.ConstraintLayout>